--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="login">登录</string>
     <string name="code">验证码</string>
     <string name="code_hide">请输入验证码</string>
+    <string name="SelectISBNInterface">http://139.199.123.55:8080/book/SelectIsbn.jsp</string>
 
 
 </resources>
