--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,9 @@
     <string name="SelectISBNInterface">http://139.199.123.55:8080/book/SelectIsbn.jsp</string>
     <string name="douban_score">豆瓣评分</string>
     <string name="WantReadInterface">http://139.199.123.55:8080/book/WantRead.jsp</string>
+    <string name="about_us">关于我们</string>
+    <string name="logo">LOGO</string>
+    <string name="contact_us">联系我们</string>
 
 
 </resources>
