--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="about_us">关于我们</string>
     <string name="logo">LOGO</string>
     <string name="contact_us">联系我们</string>
+    <string name="NoteText">笔记：</string>
+    <string name="reason">原因：</string>
 
 
 </resources>
